# go2-Fire-suppression-and-autonomous-quadruped-robots_2026_capstone

./: README (2).md  README.md  run_vlm_stack.sh
src/my_go2_controller/: package.xml  setup.cfg  setup.py
src/my_go2_controller/launch/: go2_lidar.launch.py  go2_sensor.launch.py  nav2_go2.launch.py  safety_stack.launch.py  tf_setup.launch.py
src/my_go2_controller/my_go2_controller/: front_obstacle.py  gap_finder.py  led_off.py  move_test.py  pitch_test.py  safety_gate.py  state_reader.py  teleop_keyboard.py
src/my_go2_nav_bringup/: package.xml  setup.cfg  setup.py
src/my_go2_nav_bringup/config/: slam_toolbox.yaml
src/my_go2_nav_bringup/launch/: go2_mapping.launch.py  go2_mapping_utlidar.launch.py
src/my_go2_nav_bringup/scripts/: cmd_vel_to_sport.py  cmd_vel_to_sport.py.bak.20260531_001532  cmd_vel_to_sport_speedlevel.py  cmd_vel_to_sportmode.py  cmd_vel_to_sportmode2.py  restamp_cloud.py  test_gait.py
src/my_go2_odom_relay/: package.xml  setup.cfg  setup.py
src/my_go2_odom_relay/my_go2_odom_relay/: odom_relay.py
src/vlfm_nav/: package.xml  setup.cfg  setup.py
src/vlfm_nav/vlfm_nav/: vlfm_source_nav_v20.py
