<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_go2_nav_bringup</name>
  <version>0.0.0</version>
  <description>Go2 navigation bringup package</description>
  <maintainer email="unitree@todo.todo">unitree</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>unitree_api</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>slam_toolbox</depend>
  <depend>pointcloud_to_laserscan</depend>
  <depend>tf2_ros</depend>
  <depend>rviz2</depend>
  <depend>nav2_bringup</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
